--- a/style/login.css
+++ b/style/login.css
@@ -180,6 +180,7 @@ body {
     cursor: pointer;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s, transform 0.1s;
+    margin-top: 45px;
 }
 
 .login-btn:hover {
